samples/_failures_safe/1761331910_85b85b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_815a956b.c: In function ‘main’:
./samples/SAFE/__tmp_815a956b.c:153:9: error: expected declaration or statement at end of input
  153 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_815a956b.c:153:9: error: expected declaration or statement at end of input
